@@ -1,3 +1,8 @@
+2006-04-20  Daniel Henninger  <jadestorm@nc.rr.com>
+
+	* src/avatar.py:
+	Fixed stupid bug with avatar conversion.
+
 2006-04-18  Daniel Henninger  <jadestorm@nc.rr.com>
 
 	* src/legacy/icqt.py:
